--- a/fitchdoc.tex
+++ b/fitchdoc.tex
@@ -27,7 +27,7 @@
 
 \documentclass{ltxdoc}
 
-\usepackage{fitch,graphicx,showexpl,fullpage}
+\usepackage{fitch,graphicx,showexpl,fullpage,hyperref}
 
 \lstset{%
   basicstyle=\ttfamily\small,
